--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ body{
 h1{
     font-size: 50px;
 }
-p{
-    text-align: justify;
+h2{
+    font-size: 40px;
 }
+
 .name_color{
     color: orange;
 }
-section{
+.flxible_container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -42,4 +43,34 @@ section{
     background-image: url(image/dream-bg.png);
     background-position: right;
     background-repeat: no-repeat;
+}
+.exprience_iteam{
+    box-shadow: 10px 10px 40px gray;
+    width:70%;
+    padding: 35px;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    text-align: justify;
+
+}
+.exprience_area{
+    background-image: url(image/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#Web_dev_ex{
+    border-image: linear-gradient(blue , cyan);
+    border-image-slice: 1;
+    border-left: 7px solid;
+    
+}
+#full_stack_ex{
+    border-image: linear-gradient(salmon , blue , tomato);
+    border-image-slice: 1;
+    border-left: 7px solid;
+
+}
+footer p{
+    text-align: center;
 }
